Add feature - find r/module-role
Find command now support finding contacts based on module-role with
prefix r/, e.g. find r/cs1101s-ta.
If role is not specified, student is assumed.
When multiple inputs are given, e.g. find r/cs1101s-ta r/cs1231s n/Ben,
contacts matching any of the keywords given will be shown.